--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,4 +1,4 @@
-name: Auto-update firmware
+name: Auto-update grafana
 
 on:
   push:
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Compile grafana
-        run: docker run ghcr.io/gokrazy-community/crossbuild-armhf:impish-20220316 bash < test.sh
+        run: docker run -it ghcr.io/gokrazy-community/crossbuild-armhf:impish-20220316 bash < test.sh
