--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -5,9 +5,9 @@ on:
     # daily, hour and minute chosen arbitrarily
     - cron: "32 14 * * *"
   workflow_dispatch:
-  push: # TODO: remove
-    branches:
-      - main
+  # push: # TODO: remove
+  #   branches:
+  #     - main
 
 jobs:
   build:
