--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -38,11 +38,11 @@ jobs:
 
       - name: Compile latest grafana
         if: steps.check.outputs.sha != ''
-        run: go run cmd/compile
+        run: go run ./cmd/compile/main.go
 
       - name: Retrieve public files
         if: steps.check.outputs.sha != ''
-        run: go run cmd/retrieve-public ${{steps.check.outputs.tag}}
+        run: go run ./cmd/retrieve-public/main.go ${{steps.check.outputs.tag}}
 
       - name: Commit the new grafana
         if: steps.check.outputs.sha != ''
