--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.18
+          go-version: 'stable'
 
       - name: Check latest grafana version from https://api.github.com/repos/grafana/grafana/
         id: check
